~~~~~~~~~
- Deprecated getMessage() and getStatusCode() in peer.http.HttpResponse 
  in favor of message() and statusCode().
  (friebe, Gabriel Mihai Ghigea)
- Deprecated getHeaders() and getHeader() in peer.http.HttpResponse and
  replaced by headers() and header(), respectively. The new methods have
  changed return types to be able to support multiple headers
  (friebe, Gabriel Mihai Ghigea)

Bugfixes
~~~~~~~~
- Fixed unbuffered queries using datasets using rdbms.Statement instances
  as criteria not actually being unbuffered
  (friebe)
- Fixed peer.http.HttpInputStream to no longer read beyond EOF in certain
  situations
  (friebe)
- Fixed peer.SocketInputStream to return 0 from available() on EOF
  (friebe)
- Fixed string quotation and comment handling in Properties::fromString()
  (hinckel)

Features
~~~~~~~~
- Ports: Added com.google.search.custom package (Google Custom Search
  implementation, for use e.g. with the GSA)
  (friebe)
- Added possibility to explicitely pass SSL version to peer.http APIs
  by using "https+v2://" or "https+v3://" in the URL's scheme
  (friebe, Gabriel Mihai Ghigea)
- Added XSLStringCallback::wordwrap() to wrap long texts at given column
  (hinckel, toennishoff)


Version 5.7.10, released 2010-07-04
-----------------------------------
SVN version: 14692

Heads up!
~~~~~~~~~
- Changed unittests with @expect to fail if the expected exception is 
  caught but a warning is raised
  (friebe, kiesel, ilankin)
- Changed URL to service mapping in web runners - a mapping on the URL 
  /service will no longer catch the URL /services (note the trailing "s"),
  while it will catch any of /service, /service/json or /service/ws/soap.
  http://news.xp-framework.net/article/355/2010/06/10/
  (friebe)

RFCs
~~~~
- Implemented RFC #0203 - Unbuffered queries
  (friebe)

Bugfixes
~~~~~~~~
- Fixed webservices.json.JsonDecoder not to convert integers on stream
  larger than LONG_MAX to LONG_MAX (or LONG_MIN, respectively)
  (friebe, treuter, robert)